--- a/engine1/style.css
+++ b/engine1/style.css
@@ -147,9 +147,7 @@
 
 /* hide controls when video start play */
 #wowslider-container1.ws_video_playing .ws_bullets,
-#wowslider-container1.ws_video_playing .ws_fullscreen,
-#wowslider-container1.ws_video_playing .ws_next,
-#wowslider-container1.ws_video_playing .ws_prev {
+#wowslider-container1.ws_video_playing .ws_fullscreen, {
 	display: none;
 }
 
@@ -216,7 +214,7 @@
 #wowslider-container1 .ws_bullets a:hover, #wowslider-container1 .ws_bullets a.ws_selbull{ 
 	background-position: 0 100%;
 }	
-#wowslider-container1 a.ws_next, #wowslider-container1 a.ws_prev {
+/* #wowslider-container1 a.ws_next, #wowslider-container1 a.ws_prev {
 	position:absolute;
 	top:50%;
 	margin-top:-3.2em;
@@ -225,8 +223,8 @@
 	width: 6.5em;
 	background-image: url(./arrows.png);
 	background-size: 200%;
-}
-#wowslider-container1 a.ws_next{
+} */
+/* #wowslider-container1 a.ws_next{
 	background-position: 100% 0;
 	right:0;
 }
@@ -239,10 +237,10 @@
 }
 #wowslider-container1 a.ws_prev:hover {
 	background-position: 0 100%; 
-}
+} */
 
 /*playpause*/
-#wowslider-container1 .ws_playpause {
+/* #wowslider-container1 .ws_playpause {
     width: 6.5em;
     height: 6.5em;
     position: absolute;
@@ -265,7 +263,10 @@
 
 #wowslider-container1 .ws_pause:hover, #wowslider-container1 .ws_play:hover {
     background-position: 100% 100% !important;
-}/* bottom right */
+} */
+
+
+/* bottom right */
 #wowslider-container1  .ws_bullets {
     bottom: 0px;
 	right: 5px;
@@ -356,7 +357,7 @@
 	}
 }
 @media all and (max-width:400px){
-	#wowslider-container1 .ws_controls,
+	#wowslider-container1 ,
 	#wowslider-container1 .ws_bullets,
 	#wowslider-container1 .ws_thumbs{
 		display: none
